--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toyaricon",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "description": "一个用于web的图标库",
   "main": "./dist/index.js",
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "module": "./dist",
-
+  "files": [
+    "/dist/*"
+  ],
   "keywords": [
     "svg",
     "icon",
