--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node genIcon.js && node svgToIcon.js ",
     "preview": "vite preview"
   },
   "module": "./dist",
